--- a/public/app/trophies/templates/modal-trophy.html
+++ b/public/app/trophies/templates/modal-trophy.html
@@ -3,13 +3,15 @@
      role="dialog" 
      aria-hidden="true"
      modal-close-bg>
-    <div class="app-modal__dialog">
+    <div class="app-modal__dialog app-modal__dialog--head">
+        <a href modal-close class="app-modal__close">
+            <i class="material-icons">clear</i>
+        </a>
+        <div class="app-modal__head">
+            {{ 'trophies.content.' + trophy + '.title' | translate }}
+        </div>
         <div class="app-modal__content">
             <div class="app-trophy app-trophy--modal">
-                <a href modal-close class="app-modal__close">
-                    <i class="material-icons">clear</i>
-                </a>
-                <h3 class="app-trophy__title">{{ 'trophies.content.' + trophy + '.title' | translate }}</h3>
                 <span class="app-trophy__picture"> 
                     <img ng-if="hasTrophy(value)" ng-src="../images/trophies/trophy-{{ trophy }}.svg">
                    <img ng-if="!hasTrophy(value)" ng-src="../images/trophies/trophy-{{ trophy }}.svg">
