--- a/public/css/style.css
+++ b/public/css/style.css
@@ -190,9 +190,10 @@ a {
 }
 
 .app-modal__close {
+  z-index: 10;
   position: absolute;
-  top: 1rem;
-  right: 1rem;
+  top: 18px;
+  right: 18px;
   color: rgba(0, 0, 0, 0.5);
 }
 
@@ -201,18 +202,24 @@ a {
 }
 
 .app-modal__head {
-  line-height: 6rem;
+  line-height: 30px;
+  padding: 24px;
   text-align: center;
   text-transform: uppercase;
-  font-size: 2rem;
+  font-size: 24px;
   background-color: #795548;
   color: #fff;
 }
 
 .app-modal__content {
   position: relative;
-  padding: 2.4rem;
+  padding: 30px;
   background-color: #fff;
+}
+
+.app-modal__content--finish-game {
+  padding-left: 15px;
+  padding-right: 15px;
 }
 
 .app-modal__title {
@@ -547,11 +554,6 @@ a {
   color: #767777 !important;
 }
 
-.app-header .mdl-layout__drawer-button {
-  background: transparent;
-  color: #767777;
-}
-
 .app-header .mdl-navigation__link {
   color: #757575;
   font-weight: 700;
@@ -616,6 +618,8 @@ a {
 }
 
 .app-drawer .mdl-navigation__link.mdl-navigation__link {
+  padding: 16px;
+  line-height: 24px;
   font-size: 14px;
   color: #757575;
 }
@@ -626,7 +630,7 @@ a {
 
 .app-drawer .mdl-navigation__link .material-icons {
     font-size: 24px;
-    margin-right: 32px;
+    margin-right: 18px;
 }
 
 .app-drawer .app-layout-title {
@@ -864,7 +868,7 @@ a {
 
 .app-spinner {
   display: inline-block;
-  border: 5px solid #9E9E9E;
+  border: 5px solid #dadede;
   border-top-color: #795548;
   border-radius: 50%;
   width: 50px;
@@ -884,6 +888,60 @@ a {
     100% { transform: rotate(360deg); }
 }
 
+.app-search__game {
+  text-align: center;
+}
+
+.app-search__game-edit {
+  position: absolute;
+  right: 30px;
+  top: 30px;
+}
+
+.app-search__game-title {
+  font-size: 24px;
+  line-height: 40px;
+  margin-bottom: 18px;
+}
+
+.app-search__game-params {
+  margin-bottom: 24px;
+}
+
+.app-search__game-time {
+  font-weight: 800;
+  font-size: 18px;
+}
+
+.app-search__game-spinner {
+  position: relative;
+  margin-bottom: 24px;
+}
+
+.app-search__game-color {
+  display: inline-block;
+  position: absolute;
+  left: calc(50% - 27px);
+  top: 3px;
+  width: 54px;
+  height: 54px;
+  background: linear-gradient(to right, #fff 0%, #fff 50%, #000 50%, #000 100%);
+  border-radius: 50%;
+}
+
+.app-search__game-color--white {
+  background: #fff;
+}
+
+.app-search__game-color--black {
+  background: #000;
+}
+
+.app-spinner--search-game {
+  position: relative;
+  margin-bottom: 24px;
+}
+
 .app-table {
   font-size: 18px;
 }
@@ -900,6 +958,28 @@ a {
   width: 40px;
   height: 40px;
   border-radius: 3px;
+}
+
+.app-table__color {
+  line-height: 0;
+}
+
+.app-table__color:after {
+  content: '';
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+  border: 2px solid #dadede;
+  background: linear-gradient(to right, #fff 0%, #fff 50%, #000 50%, #000 100%);
+  border-radius: 50%;
+}
+
+.app-table__color--white:after {
+  background: #fff;
+}
+
+.app-table__color--black:after {
+  background: #000;
 }
 
 .app-table__rank {
@@ -1041,7 +1121,7 @@ a {
 .app-trophy--modal .app-trophy__picture {
   display: inline-block;
   float: none;
-  margin: 20px 0;
+  margin-bottom: 18px;
   width: 200px;
   height: 200px;
 }
@@ -1106,8 +1186,8 @@ a {
 .app-button__fixed {
   display: block;
   position: fixed;
-  right: 25px;
-  bottom: 25px;
+  right: 36px;
+  bottom: 36px;
   z-index: 9;
 }
 
@@ -1412,8 +1492,22 @@ a {
 }
 
 .app-game__result {
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-flex-flow: row wrap;
+  -ms-flex-flow: row wrap;
+  flex-flow: row wrap;
+  -webkit-align-items: stretch;
+  -ms-flex-align: stretch;
+  align-items: stretch;
   margin-bottom: 20px;
   padding: 0;
+}
+
+.app-game__result-color {
+  width: 50%;
+  margin: 24px 0;
 }
 
 .app-game__result-player {
@@ -1605,7 +1699,12 @@ a {
     padding: 0 16px;
   }
 
-  .app-button__fixed--game {
+  .app-button__fixed {
+    bottom: 14px;
+    right: 24px;
+  }
+
+  .app-button__fixed.app-button__fixed--game {
     bottom: 46px;
   }
 
@@ -1625,6 +1724,11 @@ a {
 
   .app-footer {
     font-size: 13px;
+  }
+
+  .app-layout.is-game .app-footer {
+    padding-bottom: 56px;
+    padding-top: 4px;
   }
 }
 
@@ -1728,13 +1832,16 @@ a {
     box-shadow: 2px 0 2px 0 rgba(0,0,0,.14), 3px 0 1px -2px rgba(0,0,0,.2), 1px 0 5px 0 rgba(0,0,0,.12);
   }
 
-  .app-button__fixed .app-button {
-    width: 30px;
-    height: 30px;
-    min-width: 30px;
+  .app-button__fixed {
+    right: 16px;
+    bottom: 14px;
   }
 
-  .app-button__fixed--logout {
+  .app-button__fixed--pagination {
+    bottom: 62px;
+  }
+
+  .app-head .app-button__create-game {
     display: none;
   }
 }
@@ -1747,9 +1854,15 @@ a {
 }
 
 @media screen and (min-width: 600px) and (max-width: 1024px) {
+
+  .app-footer {
+    padding-bottom: 24px;
+    padding-top: 6px;
+  }
+
   .app-layout.is-game .app-footer {
-    padding-top: 12px;
-    padding-bottom: 50px;
+    padding-top: 18px;
+    padding-bottom: 56px;
   }
 }
 
@@ -1826,6 +1939,14 @@ a {
     width: 100%;
     box-shadow: none;
     border-bottom: 1px solid rgba(0, 0, 0, .12);
+  }
+
+  .app-layout.is-game .mdl-cell:last-child {
+    margin-bottom: 8px;
+  }
+
+  .app-layout.is-game .app-footer {
+    padding-top: 18px;
   }
 
   .app-table--game {
@@ -1981,6 +2102,10 @@ a {
     top: 6px;
   }
 
+  .app-button__fixed .app-button .material-icons {
+    font-size: 18px;
+  }
+
   .app-button__fixed--game {
     display: none;
   }
@@ -2000,9 +2125,23 @@ a {
     text-align: center;
   }
 
+  .app-footer {
+    padding-top: 8px;
+    padding-bottom: 24px;
+  }
+
   .app-layout.is-game .app-footer {
     padding-top: 6px;
     padding-bottom: 45px;
+  }
+
+  .app-button__fixed {
+    bottom: 14px;
+    right: 16px;
+  }
+
+  .app-button__fixed--pagination {
+    bottom: 59px;
   }
 }
 
@@ -2022,13 +2161,6 @@ a {
 
   .app-profile__name {
     font-size: 15px;
-  }
-
-  .app-head .app-button__create-game {
-    position: fixed;
-    right: 16px;
-    bottom: 8px;
-    z-index: 9;
   }
 
   .app-table {
@@ -2131,5 +2263,25 @@ a {
   .app-game__lost-piece:not(:first-child) {
     margin-right: 0;
     margin-left: -3px;
+  }
+
+  .app-game__result-player {
+    font-size: 18px;
+    height: 18px;
+    line-height: 18px;
+    margin-bottom: 12px;
+  }
+
+  .app-game__result-icon {
+    margin-bottom: 12px;
+  }
+
+  .app-game__result-icon img {
+    height: 78px;
+    width: 78px;
+  }
+
+  .app-game__result-points {
+    font-size: 18px;
   }
 }
