fix create game

--- a/public/app/components/templates/modal-create-game.html
+++ b/public/app/components/templates/modal-create-game.html
@@ -46,7 +46,7 @@
                 </div>
             </form>
             <div class="app-search__game" ng-show="loadGame">
-                <button ng-click="removeGame(); loadGame = false;" 
+                <button ng-click="stopLoad();" 
                         class="app-search__game-edit mdl-button mdl-js-button mdl-button--fab mdl-button--mini-fab mdl-button--colored">
                     <i class="material-icons">edit</i>
                 </button>
