--- a/public/index.ejs
+++ b/public/index.ejs
@@ -35,7 +35,7 @@
         <link href="css/icomoon/style.css" rel="stylesheet">
         <link href="css/fonts.css" rel="stylesheet">
         <link href="css/style.css" rel="stylesheet">
-        <link ng-if="user.lang == 'ar'" ng-href="css/style-ar.css" rel="stylesheet">
+        <link ng-if="lang() == 'ar'" ng-href="css/style-ar.css" rel="stylesheet">
     </head>
     <body>
 
