--- a/public/index.ejs
+++ b/public/index.ejs
@@ -204,12 +204,13 @@
         <script src="lib/jquery.min.js"></script>
         <script src="lib/jquery-ui.min.js"></script>
 
+        <script src="lib/chart.min.js"></script>
+
         <script src="lib/material.min.js"></script>
 
         <script src="lib/angular.min.js"></script>
         <script src="lib/angular-route.min.js"></script>
         <script src="lib/angular-cookies.min.js"></script>
-        <script src="lib/angular-easypiechart.min.js"></script>
 
         <script src="app/app.js"></script>
 
