--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1202,16 +1202,110 @@ a {
   z-index: 9;
 }
 
-.app-button__fixed--game {
-  bottom: 46px;
+.app-button__fixed.app-button__fixed--game {
+  bottom: 50px;
+}
+
+.app-button__fixed--game.app-button__fixed--action {
+  right: 102px;
 }
 
 .app-button__fixed .app-button {
   margin-left: 6px;
 }
 
-.app-button__fixed .app-button:last-child {
+.app-button__fixed .app-button:first-child {
   margin-left: 0;
+}
+
+.app-button__fixed--color {
+  position: fixed;
+  right: 30px;
+  bottom: 46px;
+  width: 56px;
+  padding: 0 6px;
+}
+
+.app-button__fixed--color.is-active,
+.app-button__fixed--color:hover {
+  height: 532px;
+}
+
+.app-button__fixed--color .app-button.app-button--color {
+  display: none;
+  position: absolute;
+  bottom: 0;
+  margin-left: 0;
+}
+
+.app-button__fixed--color .app-button--color:nth-child(2) {
+  bottom: 68px;
+}
+
+.app-button__fixed--color .app-button--color:nth-child(3) {
+  bottom: 136px;
+}
+
+.app-button__fixed--color .app-button--color:nth-child(4) {
+  bottom: 204px;
+}
+
+.app-button__fixed--color .app-button--color:nth-child(5) {
+  bottom: 272px;
+}
+
+.app-button__fixed--color .app-button--color:nth-child(6) {
+  bottom: 340px;
+}
+
+.app-button__fixed--color .app-button--color:nth-child(7) {
+  bottom: 408px;
+}
+
+.app-button__fixed--color .app-button--color:nth-child(8) {
+  bottom: 476px;
+}
+
+.app-button__fixed--color.is-active .app-button--color,
+.app-button__fixed--color:hover .app-button--color,
+.app-button__fixed--color .app-button--color:first-child {
+  display: initial;
+}
+
+.app-button__fixed--color .app-button--color:first-child {
+  cursor: auto;
+}
+
+.app-button.app-button--color-default {
+  background-image: linear-gradient(to right, #607D8B 50%, #CFD8DC 50%);
+}
+
+.app-button.app-button--color-pink {
+  background-image: linear-gradient(to right, #AD1457 50%, #F8BBD0 50%);
+}
+
+.app-button.app-button--color-blue {
+  background-image: linear-gradient(to right, #01579B 50%, #BBDEFB 50%);
+}
+
+.app-button.app-button--color-orange {
+  background-image: linear-gradient(to right, #B1613C 50%, #EBD0B3 50%);
+}
+
+.app-button.app-button--color-green {
+  background-image: linear-gradient(to right, #388E3C 50%, #C8E6C9 50%);
+}
+
+.app-button.app-button--color-lime {
+  background-image: linear-gradient(to right, #827717 50%, #F0F4C3 50%);
+}
+
+.app-button.app-button--color-red {
+  background-image: linear-gradient(to right, #D32F2F 50%, #FFCDD2 50%);
+}
+
+.app-button.app-button--color-brown {
+  background-image: linear-gradient(to right, #795548 50%, #D7CCC8 50%);
 }
 
 .app-game__toggle {
@@ -1444,13 +1538,97 @@ a {
   float: left;
   display: block;
   width: 12.5%;
-  background-color: rgb(180, 140, 100);
+  background-color: #607D8B;
+}
+
+.app-game__board--pink .app-game__box {
+  background-color: #C2185B;
+}
+
+.app-game__board--blue .app-game__box {
+  background-color: #01579B;
+}
+
+.app-game__board--orange .app-game__box {
+  background-color: #B1613C;
+}
+
+.app-game__board--green .app-game__box {
+  background-color: #388E3C;
+}
+
+.app-game__board--lime .app-game__box {
+  background-color: #827717;
+}
+
+.app-game__board--red .app-game__box {
+  background-color: #D32F2F;
+}
+
+.app-game__board--brown .app-game__box {
+  background-color: #795548;
 }
 
 .app-game__box:before {
   display: block;
   content:'';
   padding-top: 100%;
+}
+
+.app-game__board--player-white .app-game__row:nth-child(odd) .app-game__box:nth-child(even),
+.app-game__board--player-white .app-game__row:nth-child(even) .app-game__box:nth-child(odd),
+.app-game__board--player-black .app-game__row:nth-child(even) .app-game__box:nth-child(even),
+.app-game__board--player-black .app-game__row:nth-child(odd) .app-game__box:nth-child(odd) {
+  background-color: #CFD8DC;
+}
+
+.app-game__board--player-white.app-game__board--pink .app-game__row:nth-child(odd) .app-game__box:nth-child(even),
+.app-game__board--player-white.app-game__board--pink .app-game__row:nth-child(even) .app-game__box:nth-child(odd),
+.app-game__board--player-black.app-game__board--pink .app-game__row:nth-child(even) .app-game__box:nth-child(even),
+.app-game__board--player-black.app-game__board--pink .app-game__row:nth-child(odd) .app-game__box:nth-child(odd) {
+  background-color: #F8BBD0;
+}
+
+.app-game__board--player-white.app-game__board--blue .app-game__row:nth-child(odd) .app-game__box:nth-child(even),
+.app-game__board--player-white.app-game__board--blue .app-game__row:nth-child(even) .app-game__box:nth-child(odd),
+.app-game__board--player-black.app-game__board--blue .app-game__row:nth-child(even) .app-game__box:nth-child(even),
+.app-game__board--player-black.app-game__board--blue .app-game__row:nth-child(odd) .app-game__box:nth-child(odd) {
+  background-color: #BBDEFB;
+}
+
+.app-game__board--player-white.app-game__board--orange .app-game__row:nth-child(odd) .app-game__box:nth-child(even),
+.app-game__board--player-white.app-game__board--orange .app-game__row:nth-child(even) .app-game__box:nth-child(odd),
+.app-game__board--player-black.app-game__board--orange .app-game__row:nth-child(even) .app-game__box:nth-child(even),
+.app-game__board--player-black.app-game__board--orange .app-game__row:nth-child(odd) .app-game__box:nth-child(odd) {
+  background-color: #EBD0B3;
+}
+
+.app-game__board--player-white.app-game__board--green .app-game__row:nth-child(odd) .app-game__box:nth-child(even),
+.app-game__board--player-white.app-game__board--green .app-game__row:nth-child(even) .app-game__box:nth-child(odd),
+.app-game__board--player-black.app-game__board--green .app-game__row:nth-child(even) .app-game__box:nth-child(even),
+.app-game__board--player-black.app-game__board--green .app-game__row:nth-child(odd) .app-game__box:nth-child(odd) {
+  background-color: #C8E6C9;
+}
+
+.app-game__board--player-white.app-game__board--lime .app-game__row:nth-child(odd) .app-game__box:nth-child(even),
+.app-game__board--player-white.app-game__board--lime .app-game__row:nth-child(even) .app-game__box:nth-child(odd),
+.app-game__board--player-black.app-game__board--lime .app-game__row:nth-child(even) .app-game__box:nth-child(even),
+.app-game__board--player-black.app-game__board--lime .app-game__row:nth-child(odd) .app-game__box:nth-child(odd) {
+  background-color: #F0F4C3;
+}
+
+.app-game__board--player-white.app-game__board--red .app-game__row:nth-child(odd) .app-game__box:nth-child(even),
+.app-game__board--player-white.app-game__board--red .app-game__row:nth-child(even) .app-game__box:nth-child(odd),
+.app-game__board--player-black.app-game__board--red .app-game__row:nth-child(even) .app-game__box:nth-child(even),
+.app-game__board--player-black.app-game__board--red .app-game__row:nth-child(odd) .app-game__box:nth-child(odd) {
+  background-color: #FFCDD2;
+}
+
+.app-game__board--player-white.app-game__board--brown .app-game__row:nth-child(odd) .app-game__box:nth-child(even),
+.app-game__board--player-white.app-game__board--brown .app-game__row:nth-child(even) .app-game__box:nth-child(odd),
+.app-game__board--player-black.app-game__board--brown .app-game__row:nth-child(even) .app-game__box:nth-child(even),
+.app-game__board--player-black.app-game__board--brown .app-game__row:nth-child(odd) .app-game__box:nth-child(odd) {
+  background-color: #D7CCC8;
 }
 
 .app-game__box.last-turn,
@@ -1463,7 +1641,6 @@ a {
   -webkit-box-sizing: border-box;
 }
 
-
 .app-game__box.last-turn {
   border-color: #F44336;
 }
@@ -1474,13 +1651,6 @@ a {
 
 .app-game__box.ui-droppable {
   border-color: #8BC34A;
-}
-
-.app-game--white .app-game__row:nth-child(odd) .app-game__box:nth-child(even),
-.app-game--white .app-game__row:nth-child(even) .app-game__box:nth-child(odd),
-.app-game--black .app-game__row:nth-child(even) .app-game__box:nth-child(even),
-.app-game--black .app-game__row:nth-child(odd) .app-game__box:nth-child(odd) {
-  background-color: rgba(240, 220, 180, 1);
 }
 
 .app-game__box-content {
@@ -1715,14 +1885,38 @@ a {
     right: 24px;
   }
 
-  .app-button__fixed.app-button__fixed--game {
-    bottom: 46px;
-  }
-
   .app-button__fixed .app-button {
     width: 40px;
     height: 40px;
     min-width: 40px;
+  }
+
+  .app-button__fixed--color .app-button--color:nth-child(2) {
+    bottom: 52px;
+  }
+
+  .app-button__fixed--color .app-button--color:nth-child(3) {
+    bottom: 104px;
+  }
+
+  .app-button__fixed--color .app-button--color:nth-child(4) {
+    bottom: 156px;
+  }
+
+  .app-button__fixed--color .app-button--color:nth-child(5) {
+    bottom: 208px;
+  }
+
+  .app-button__fixed--color .app-button--color:nth-child(6) {
+    bottom: 260px;
+  }
+
+  .app-button__fixed--color .app-button--color:nth-child(7) {
+    bottom: 312px;
+  }
+
+  .app-button__fixed--color .app-button--color:nth-child(8) {
+    bottom: 364px;
   }
 
   .app-game__toggle--played {
@@ -1866,13 +2060,27 @@ a {
 
 @media screen and (min-width: 600px) and (max-width: 1024px) {
 
+  .app-button__fixed--color {
+    right: 26px;
+    width: 40px;
+  }
+
+  .app-button__fixed--color.active,
+  .app-button__fixed--color:hover {
+    height: 470px;
+  }
+
+  .app-button__fixed.app-button__fixed--action {
+    right: 82px;
+  }
+
   .app-footer {
     padding-bottom: 24px;
     padding-top: 6px;
   }
 
   .app-layout.is-game .app-footer {
-    padding-top: 18px;
+    padding-top: 8px;
     padding-bottom: 56px;
   }
 }
@@ -1962,6 +2170,18 @@ a {
 
   .app-table--game {
     border: 0;
+  }
+
+  .app-button__fixed.app-button__fixed--game {
+    bottom: 46px;
+  }
+
+  .app-button__fixed--color {
+    right: 4px;
+  }
+
+  .app-button__fixed.app-button__fixed--action {
+    right: 60px;
   }
 }
 
@@ -2059,23 +2279,36 @@ a {
   .app-game__toggle-icon--phone {
     display: inline-block;
     position: absolute;
-    left: 0;
     top: 0;
     height: 36px;
     width: 36px;
     border-right: 1px solid rgba(0,0,0,.12);
+    border-left: 1px solid rgba(0,0,0,.12);
+  }
+
+  .app-game__toggle-head--phone .app-game__toggle-icon--phone:nth-child(1) {
+    border-left: 0;
+    left: 0;
   }
 
   .app-game__toggle-head--phone .app-game__toggle-icon--phone:nth-child(2) {
+    border-left: 0;
     left: 36px;
   }
 
   .app-game__toggle-head--phone .app-game__toggle-icon--phone:nth-child(3) {
-    left: 72px;
+    border-right: 0;
+    right: 72px;
   }
 
   .app-game__toggle-head--phone .app-game__toggle-icon--phone:nth-child(4) {
-    left: 108px;
+    border-right: 0;
+    right: 36px;
+  }
+
+  .app-game__toggle-head--phone .app-game__toggle-icon--phone:nth-child(5) {
+    border-right: 0;
+    right: 0;
   }
 
   .app-game__toggle-icon--phone.app-game__toggle-icon--action-phone {
@@ -2111,6 +2344,60 @@ a {
     position: absolute;
     right: 6px;
     top: 6px;
+  }
+
+  .app-game__toggle-icon--color {
+    display: none;
+    position: absolute;
+    background: #fff;
+    padding: 6px;
+    height: 24px;
+    width: 24px;
+    border-top: 1px solid rgba(0,0,0,.12);
+  }
+
+  .app-game__toggle-icon--phone.is-active .app-game__toggle-icon--color,
+  .app-game__toggle-icon--color:first-child {
+    display: block;
+  }
+
+  .app-game__toggle-icon--color:first-child {
+    border-top: 0;
+  }
+
+  .app-game__toggle-icon--color:nth-child(2) {
+    bottom: 36px;
+  }
+
+  .app-game__toggle-icon--color:nth-child(3) {
+    bottom: 73px;
+  }
+
+  .app-game__toggle-icon--color:nth-child(4) {
+    bottom: 110px;
+  }
+
+  .app-game__toggle-icon--color:nth-child(5) {
+    bottom: 147px;
+  }
+
+  .app-game__toggle-icon--color:nth-child(6) {
+    bottom: 182px;
+  }
+
+  .app-game__toggle-icon--color:nth-child(7) {
+    bottom: 219px;
+  }
+
+  .app-game__toggle-icon--color:nth-child(8) {
+    bottom: 255px;
+  }
+
+  .app-game__toggle-icon--color .app-button--color {
+    display: inline-block;
+    height: 24px;
+    width: 24px;
+    border-radius: 50%;
   }
 
   .app-button__fixed .app-button .material-icons {
